# TaskForge

./: .clinerules  .gitignore  .pre-commit-config.yaml  POINTS.md  README.md  docker-compose.yml  justfile  package-lock.json  points.json  test_admin.py  test_api.py
.github/workflows/: ci.yml
.opencode/: config.toml
.opencode/agent/: TEAM_GUIDE.md  implementer.md  opencode.jsonc  orchestrator.md  reasoner.md  reviewer.md  verifier.md
Docs/: APISpecification.md  BasicDesign.md  DatabaseDesign.md  DetailedDesign.md  RepositoryAnalysisFeature.md  RequirementsDefinitionDocument.md  SecurityDesign.md
backend/: .coverage  .env.example  Dockerfile  README.md  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 1e22211c0b09_add_achievement_key_and_title_fields.py  60aabd7adfb5_add_soft_delete_columns.py  834d79f0b33c_add_project_description.py  88e5fcd2b3a5_add_points_system_tables.py  9c6062785959_add_soft_delete_to_models.py  a986506088ad_initial_schema.py  ef5b857ce607_add_user_role_field.py  f8c3a2b1d0e9_add_repository_table.py
backend/app/: celery_app.py  main.py
backend/app/api/: dependencies.py  error_handlers.py  schemas.py
backend/app/api/routers/: admin.py  ai.py  auth.py  points.py  projects.py  repositories.py  sprints.py  tasks.py
backend/app/core/: config.py  exceptions.py  redis.py  security.py
backend/app/db/: session.py
backend/app/middleware/: rate_limit.py
backend/app/models/: models.py
backend/app/services/: ai_service.py  repo_analyzer.py
backend/app/tasks/: ai_tasks.py  repo_tasks.py
backend/app/utils/: pagination.py  soft_delete.py
backend/tests/: conftest.py  factories.py  test_error_handlers.py
backend/tests/api/: test_admin.py  test_ai.py  test_auth.py  test_points.py  test_projects.py  test_sprints.py  test_tasks.py
backend/tests/fixtures/: auth.py
backend/tests/services/: test_ai_service.py
frontend/: .prettierrc  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/scripts/: generate-types.sh
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: error-boundary.tsx  gantt-chart-view.tsx  kanban-board.tsx  providers.tsx  scrum-view.tsx  sprint-manager.tsx  task-detail-dialog.tsx
frontend/src/components/ui/: select.tsx
frontend/src/hooks/: use-auth-store.ts
frontend/src/lib/: validations.ts
frontend/src/lib/api/: client.ts  fetch-client.ts  index.ts
frontend/src/test/: setup.ts
frontend/src/test/mocks/: handlers.ts  (+1 more)
frontend/src/types/: generated.ts  index.ts
scripts/: dev-all.sh
(+7 files in other folders)
